# dci-module-ppn-connectivity-demand

./: CMakeLists.txt  README.md
idl/ppn/connectivity/: demand.idl
src/: demand.cpp  demand.hpp  entry.cpp  pch.hpp
src/demand/: element.cpp  element.hpp  probabilityQueue.cpp  probabilityQueue.hpp  registry.cpp  registry.hpp
